--- a/src/features/circle/ui/StyleCircle.module.scss
+++ b/src/features/circle/ui/StyleCircle.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   width: 536px;
-  height: 621px;
+  height: 612px;
   align-items: center;
 }
 
@@ -11,6 +11,41 @@
   height: 530px;
   border: 1px solid black;
   border-radius: 100%;
+}
+
+.circleContainer {
+  position: relative;
+  width: 530px;
+  height: 530px;
+}
+
+.circle {
+  width: 100%;
+  height: 100%;
+  border: 1px solid black;
+  box-sizing: border-box;
+  /* Black blue */
+  border: 1px solid rgb(66, 86, 122);
+  opacity: 0.2;
+
+  border-radius: 100%;
+}
+
+.positionedElement {
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+
+.marker {
+  width: 6px;
+  height: 6px;
+  background: rgb(66, 86, 122);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
+  color: white;
 }
 
 .button {
